--- a/style.css
+++ b/style.css
@@ -712,10 +712,12 @@ img{
 }
 .project__bg{
     background-color: var(--first-color-second);
-    padding-top: 3rem;
+    
+    
 }
 .project__container {
     background-color: #772296 ! important;
+    padding-bottom: 3rem !important;
 }
 .project__title{
     font-size: var(--h2--font-size);
@@ -733,6 +735,48 @@ img{
     justify-self: center;
     margin-bottom: 50px;
 }
+.accordion{
+    max-width: 800px;
+}
+.accordion .contentBx{
+    position: relative;
+    margin: 10px 20px;
+    
+}
+
+.accordion .contentBx .label{
+    position: relative;
+    padding: 10px;
+    background: #FFFFFF;
+    color: #000;
+    cursor: pointer;
+    border-radius:2px;
+}
+.accordion .contentBx .label::before{
+    content:"+";
+    position: absolute;
+    top: 50%;
+    right:20px;
+    transform: translateY(-50%);
+    font-size: 1.5em;
+}
+.accordion .contentBx.active .label::before{
+    content:"-";
+}
+.accordion .contentBx .content{
+    position: relative;
+    background: #F8EEFC;
+    height:0;
+    overflow: hidden;
+    transition: 0.5s;
+    overflow-y: auto;
+    text-align: justify;
+}
+.accordion .contentBx.active .content{
+    height:150px;
+    padding: 10px;
+}
+
 
 /*===Testimonial===*/
 .testimonial__data,
