--- a/style.css
+++ b/style.css
@@ -153,6 +153,22 @@ img{
     max-width: 768px;
     margin-left: var(--mb-1-5);
     margin-right: var(--mb-1-5);
+    color: black;
+}
+.container2{
+    max-width: 768px;
+    margin-left:var(--mb-1-5);
+    margin-right: var(--mb-1-5);
+    color: white;
+    margin:auto;
+    
+}
+.container3{
+    max-width: 768px;
+    margin-left:var(--mb-1-5);
+    margin-right: var(--mb-1-5);
+    color: white;
+    margin:auto;
 }
 .grid{
     display: grid;
@@ -718,6 +734,7 @@ img{
 .project__container {
     background-color: #772296 ! important;
     padding-bottom: 3rem !important;
+
 }
 .project__title{
     font-size: var(--h2--font-size);
@@ -814,6 +831,11 @@ img{
 }
 .swiper-pagination .swiper-pagination-testimonial{
     bottom: 0;
+}
+
+/*Programming skill --*/
+.ol .li{
+  color:white;
 }
 
 
